# GraspGen

./: .gitignore  README.md  pyproject.toml
client-server/: graspgen_client.py
docker/: build.sh  compose.serve.yml  graspgen_cuda121.dockerfile  run.sh  run_server.sh  serve.dockerfile
grasp_gen/dataset/: dataset.py
grasp_gen/serving/: zmq_client.py  zmq_server.py
grasp_gen/utils/: point_cloud_utils.py
mcp/: README.md  pyproject.toml
mcp/src/mcp_server_graspgen/: __init__.py  __main__.py  server.py
scripts/: convert_obj_to_usd.py  demo_object_mesh.py  demo_orbbec_gemini2.py  demo_scene_pc.py  prepare_finetune.py  record_grasp.py  save_grasps_to_usd.py  test_training_step.py
tests/: conftest.py  test_inference_installation.py  test_inference_perf.py  test_record_grasp.py  test_serving.py  test_usd_grasp_pipeline.py
